# kopernikus_task

./: README.md  pyproject.toml
src/: config.py  core.py  io_util.py  main.py  tuning_research.py  utils.py
