[tool.poetry]
name = "kopernikus-task"
version = "0.1.0"
description = "This is an assignment for technical interview"
authors = ["harshmunshi <harshmunshi03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.8.0.74"
black = "^23.7.0"
isort = "^5.12.0"
imutils = "^0.5.4"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
